support of java8 add, gitignore update