@@ -5,6 +5,7 @@ import com.epam.spring.users_and_orders.model.User;
 import org.springframework.stereotype.Repository;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 import java.util.function.Supplier;
@@ -14,11 +15,11 @@ public class UserRepository {
 
   private static final List<User> USERS;
 
-  private static final List<String> USERS_NAMES = List.of("Ivan", "Andrey", "Maxim", "Iluya", "Alexey", "John", "Petr",
-      "Semeon", "Artem", "Vladimir", "Donald");
-  private static final List<String> USERS_LAST_NAMES = List.of("Ivanov", "Andreev", "Maximov", "Iluyich", "Alexeev",
-      "Smith", "Petrov", "Semenov", "Artemov", "Putin", "Trump");
-  private static final List<String> ORDERS_NAMES = List.of("Potato", "Tomato", "Cucumber", "Coffee", "Tea",
+  private static final List<String> USERS_NAMES = Arrays.asList("Ivan", "Andrey", "Maxim", "Iluya", "Alexey", "John",
+      "Petr", "Semeon", "Artem", "Vladimir", "Donald");
+  private static final List<String> USERS_LAST_NAMES = Arrays.asList("Ivanov", "Andreev", "Maximov", "Iluyich",
+      "Alexeev", "Smith", "Petrov", "Semenov", "Artemov", "Putin", "Trump");
+  private static final List<String> ORDERS_NAMES = Arrays.asList("Potato", "Tomato", "Cucumber", "Coffee", "Tea",
       "Bread", "Olive Oil", "Bubble gum", "Magazine", "Pork", "Coca-cola");
 
   private final static Random random = new Random();
